@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<map version="1.0" orientation="orthogonal" width="14" height="8" tilewidth="32" tileheight="32">
+ <tileset firstgid="1" name="Desert" tilewidth="32" tileheight="32" spacing="1" margin="1">
+  <image source="tmw_desert_spacing.png" width="265" height="199"/>
+ </tileset>
+ <layer name="Layer 0" width="14" height="8">
+  <data encoding="base64" compression="zlib">
+   eJxTY2BgkCMRa0BpRiBmAmJmIJYEYikolkaSY0JSA9PPCcRcQMwNxIpArALEqkCsDJUTAWIhIBaFqsGlTweIdZH0cSOpw6cP3T5i9aHbJwP1myyaPkGo+4WBWBOItaBYG0lOCEkNSI8+GfFgAMQA2rgKjA==
+  </data>
+ </layer>
+ <objectgroup name="Object Layer 1" width="14" height="8">
+  <object gid="31" x="97" y="250"/>
+  <object gid="31" x="119" y="237"/>
+  <object gid="31" x="140" y="218"/>
+  <object gid="31" x="160" y="199"/>
+  <object gid="31" x="180" y="185"/>
+ </objectgroup>
+</map>
